@@ -1,0 +1,4 @@
+from context import main
+
+if __name__ == '__main__':
+    main('gui')
